2012-05-18  Ilija Kocho  <ilijak@siva.com.mk>

	* include/hal_cache.h, src/kinetis_misc.c: Provide for cache
	enablement in RAM startup mode            [Bugzilla 1001606]

2012-05-19  John Dallaway  <john@dallaway.org.uk>

	* doc/kinetis.sgml: Close <para> and <refsect2> blocks.
	* cdl/hal_cortexm_kinetis.cdl: Reference per-package documentation.

2012-05-18  Ilija Kocho  <ilijak@siva.com.mk>

	* doc/kinetis_begin.sgml:
	* doc/kinetis_end.sgml:
	* doc/kinetis.sgml:
	New files -- Kinetis variant documentation. [Bug 1001580]

2012-05-17  Ilija Kocho  <ilijak@siva.com.mk>

	* cdl/hal_cortexm_kinetis.cdl:
	Bug fix: Do not refer external memory if Platform startup is
	not selected.  [ Bugzilla 1001590 ]

2012-05-04  Ilija Kocho  <ilijak@siva.com.mk>

	* cdl/hal_cortexm_kinetis.cdl:
	* src/kinetis_clocking.cdl:
	* src/kinetis_clocking.c:
	* include/hal_cache.h
	* include/var_io_lmem.h:
	* include/var_io_ddrmc.h:
	* include/var_io_devs.h:
	* include/var_io.h:
	* src/kinetis_ddram.c:
	* src/kinetis_misc.c:
	Add: Clocking support for PLL1 (K70), DDRAM controller
	Cache, eDMA - 32 chan. [Bugzilla 1001579]

2012-01-11  Tomas Frydrych <tomas@sleepfive.com>

	* include/var_io.h:
	Allow for overriding of CYGHWR_HAL_KINETIS_SIM_SCGC?_ALL_M mask
	from platform definitions.

	* include/var_io_devs.h:
	Define base pointer for SLCD controller

2012-01-05  Ilija Kocho  <ilijak@siva.com.mk>

	* cdl/kinetis_irq_scheme.cdl
	Centralized IRQ priority scheme.

	* cdl/hal_cortexm_kinetis.cdl:
	* cdl/kinetis_flexbus.cdl
	* include/var_io_devs.h:
	* include/var_io.h:
	* src/kinetis_clocking.c:
	* src/kinetis_misc.c:
	Add I/O defs for eDMA, DSPI. Add flexbus control.
	CYG_HAL_STARTUP parenthed bt CYG_HAL_STARTUP_ENV.
	Early clock start [Bugzilla 1001450]

2011-11-15  Tomas Frydrych <tomas@sleepfive.com>

	* include/var_io_gpio.h:
	Convenience macros for manipulating GPIO pins.

2011-10-19  Ilija Kocho  <ilijak@siva.com.mk>

	* cdl/hal_cortexm_kinetis.cdl:
	* cdl/kinetis_clocking.cdl: