@@ -255,5 +255,27 @@ hal_dump_pin_setting(cyg_uint32 pin)
     }
 }
 
+void CYGOPT_HAL_KINETIS_MISC_FLASH_SECTION_ATTR
+hal_clock_enable(cyg_uint32 desc)
+{
+    volatile cyg_uint32 *scgc_p;
+    
+    if(desc != CYGHWR_HAL_KINETIS_CLOCK_NONE) {
+        scgc_p = &CYGHWR_HAL_KINETIS_SIM_P->scgc1 + CYGHWR_HAL_CLOCK_REG(desc);
+        *scgc_p |= 1 << CYGHWR_HAL_CLOCK_BIT(desc);
+    }    
+}
+
+void CYGOPT_HAL_KINETIS_MISC_FLASH_SECTION_ATTR
+hal_clock_disable(cyg_uint32 desc)
+{
+    volatile cyg_uint32 *scgc_p;
+    
+    if(desc != CYGHWR_HAL_KINETIS_CLOCK_NONE) {
+        scgc_p = &CYGHWR_HAL_KINETIS_SIM_P->scgc1 + CYGHWR_HAL_CLOCK_REG(desc);
+        *scgc_p &= ~(1 << CYGHWR_HAL_CLOCK_BIT(desc));
+    }    
+}
+
 //==========================================================================
 // EOF kinetis_misc.c
